# books_from-mathematics-to-generic-programming

./: .gitignore  02-the-first-algorithm.cpp  CMakeLists.txt
